--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=SenBook
+spring.datasource.url=jdbc:mysql://${DATABASE_URL:localhost}/${DATABASE_NAME:db_bookstore}
+spring.datasource.username=${MYSQL_USERNAME:root}
+spring.datasource.password=${MYSQL_PASSWORD:root}
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.show-sql=true
+spring.data.jdbc.dialect=mysql
+spring.jpa.hibernate.ddl-auto=validate
