Feat : Ajout de l'authentication basique pour un utilisateur
Configuration faite avec Spring Security et JWT(Json Web Token).

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,4 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
 spring.data.jdbc.dialect=mysql
 spring.jpa.hibernate.ddl-auto=validate
+security.jwt.token.secret-key=${JWT_SECRET_KEY:`h+o:%TM=(U]]ahpWt~A]k%+X??W.las6qw4)(*PWE[QNFanq97w4q98.,'[[-7365rx1}
