--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,8 @@
 spring.application.name=SenBook
-
-# Configuration de la base de données MySQL
-spring.datasource.url=jdbc:mysql://localhost:3306/db_bookstore
-spring.datasource.username=root
-spring.datasource.password=""
-
-# Driver MySQL
+spring.datasource.url=jdbc:mysql://${DATABASE_URL:localhost}/${DATABASE_NAME:db_bookstore}
+spring.datasource.username=${MYSQL_USERNAME:root}
+spring.datasource.password=${MYSQL_PASSWORD:}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
-# Afficher les requêtes SQL dans la console
 spring.jpa.show-sql=true
-
-# Définition du dialecte MySQL
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
-
-# Stratégie de gestion du schéma (création automatique des tables)
-spring.jpa.hibernate.ddl-auto=create
+spring.data.jdbc.dialect=mysql
+spring.jpa.hibernate.ddl-auto=validate
